--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,8 @@
 	<head>
 		<title>{{ page.title }}</title>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+		<!--<link rel="stylesheet" type="text/css" href="/css/github-markdown.css">-->
 	</head>
 	<body>
 		<nav>
